<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/admin"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:text="@string/administrator_n_view"
        />

    <TextView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/orders"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/admin"
        android:text="@string/orders_appear_here"
        />

    <Button
        android:layout_width="100dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/exit"
        app:layout_constraintTop_toBottomOf="@id/orders"
        android:text="@string/exit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>